update-manager (1:0.93.4) UNRELEASED; urgency=low

  * DistUpgrade/removal_blacklist.cfg:
    - add openssh-blacklist-extra and openssh-extra
  * debian/control:
    - add a explict depends on lsb-release (LP: #255319)
  * UpdateManager/UpdateManager.py:
    - do not crash if lsb_release can not be run (LP: #255319)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 08 Aug 2008 20:37:20 +0200

update-manager (1:0.93.3) intrepid; urgency=low

  * fix ftbfs on powerpc

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 05 Aug 2008 21:20:59 +0200

update-manager (1:0.93.2) intrepid; urgency=low

  * DistUpgrade/DistUpgradeCache.py:
    - work around problem with packages with no priority
      (LP: #253255)
  * DistUpgrade/DistUpgradeViewGtk.py:
    - detect ctrl-c presses in the terminal and warn the 
      user that it will kill the upgrade (LP: #90866)
  * DistUpgrade/DistUpgrade.cfg:
    - when being run by the sandbox-upgrader, do not 
      reboot automatically after the upgrade finished
  * DistUpgrade/DistUpgradeController.py:
    - when a upgrade is cancelt due to network errors, 
      inform that the downloaded files will be kept 
      (LP: #242111)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 05 Aug 2008 20:37:52 +0200

update-manager (1:0.93.1) intrepid; urgency=low

  * UpdateManager/UpdateManager.py:
    - make the init_proxy stuff look for the apt.conf proxy 
      as well (thanks to vega--)
  * do-release-upgrade:
    - unify proxy configuration between gtk and cli UI
  * fix FBTFS by removing the kdepyuic calls during build
    (no longer needed in qt4)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 30 Jul 2008 11:29:00 +0200

update-manager (1:0.93) intrepid; urgency=low

  [ Michael Vogt ]
  * UpdateManager/UpdateManager.py:
    - fix typo (LP: #252195)
  * DistUpgrade/DistUpgradeController.py:
    - fix crash in cleanup code
  
  [ Jonathan Riddell ]
  * port the kde frontend to qt4
