@@ -2,10 +2,12 @@ update-manager (1:0.93.4) UNRELEASED; urgency=low
 
   * DistUpgrade/removal_blacklist.cfg:
     - add openssh-blacklist-extra and openssh-extra
-  * debian/control:
-    - add a explict depends on lsb-release (LP: #255319)
   * UpdateManager/UpdateManager.py:
     - do not crash if lsb_release can not be run (LP: #255319)
+  * DistUpgrade/DistUpgradeApport.py:
+    - do not generate apport reports against a package if
+      the error indicates that its a full disk, this is a bug
+      in update-manager than (failed to do the full disk checking)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 08 Aug 2008 20:37:20 +0200
 
